<resources>
    <string name="app_name">MovieLovers</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="login_with_gmail">Login with Gmail</string>
    <string name="email">E-mail</string>
    <string name="age">Age</string>
    <string name="sign_up">sign up</string>
    <string name="title_activity_maps">Map</string>
    <string name="book">Book</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="movie_cinemas">Movie Cinemas</string>
    <string name="rate">Rate : </string>
    <string name="description">Description</string>
    <string name="movie_name">Movie Name : </string>
    <string name="cinema_name">Cinema Name : </string>
    <string name="date">Date :</string>
    <string name="location">Location :</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="number_of_people">Number Of People</string>
    <string name="total_price">Total Price</string>
    <string name="review_order">Review Order</string>
    <string name="order">Order</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="cinema_map_location">Cinema Map Location</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="login_fail">You are not a user in this application pleas sign up</string>
    <string name="google_sign_fail">Sign in with google account fails</string>
    <string name="try_again">Some thing went wrong, Try again Later.</string>
    <string name="operation_done">Operation done . Enjoy</string>
    <string name="operation_fail">Operation failed Please try again later</string>
    <string name="sign_up_success">You Signed up successfully</string>
    <string name="data_fill">Pleas fill all the data</string>
</resources>
