<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.Activities.Reservation">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_dark_black"
        android:padding="7dp">

        <RelativeLayout
            android:id="@+id/relative_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_black"
            android:elevation="2dp"
            android:padding="12dp">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/movie_name"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/reservation_movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/cinema_name_tv"
                android:fontFamily="serif"
                android:textColor="@color/dark_light"
                android:textSize="17sp"
                tools:text="Name" />

            <TextView
                android:id="@+id/cinema_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_tv"
                android:layout_marginTop="5dp"
                android:fontFamily="serif"
                android:text="@string/cinema_name"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/reservation_cinema_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reservation_movie_name"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/cinema_name_tv"
                android:fontFamily="serif"
                android:textColor="@color/dark_light"
                android:textSize="17sp"
                tools:text="Cinema Name" />

            <TextView
                android:id="@+id/mDate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cinema_name_tv"
                android:layout_marginTop="5dp"
                android:fontFamily="serif"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/reservation_movie_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reservation_cinema_name"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/mDate_tv"
                android:fontFamily="serif"
                android:textColor="@color/dark_light"
                android:textSize="17sp"
                tools:text="07/04/2018" />

            <TextView
                android:id="@+id/location_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mDate_tv"
                android:layout_marginTop="5dp"
                android:fontFamily="serif"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/reservation_cinema_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reservation_movie_date"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/location_tv"
                android:fontFamily="serif"
                android:textColor="@color/dark_light"
                android:textSize="17sp"
                tools:text="1515 Street" />

            <Button
                android:id="@+id/reservation_cinema_location_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/reservation_cinema_location"
                android:layout_marginTop="17dp"
                android:background="@drawable/buttons_background"
                android:text="@string/cinema_map_location"
                android:textColor="@color/colorPrimary" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="serif"
            android:padding="12dp"
            android:text="@string/review_order"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/relative_lay_dow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="serif"
            android:padding="12dp"
            android:text="@string/order"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/relative_lay_dow"
            app:layout_constraintRight_toLeftOf="parent" />

        <RelativeLayout
            android:id="@+id/relative_lay_dow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="@color/light_black"
            android:elevation="2dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/relative_lay">

            <TextView
                android:id="@+id/price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/ticket_price"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/reservation_ticket_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="serif"
                android:textColor="@color/dark_light"
                android:textSize="17sp"
                tools:text="40" />

            <TextView
                android:id="@+id/people_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price_tv"
                android:layout_marginTop="12dp"
                android:fontFamily="serif"
                android:text="@string/number_of_people"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/reservation_number_of_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/reservation_ticket_price"
                android:layout_marginTop="12dp"
                android:fontFamily="serif"
                android:textColor="@color/dark_light"
                android:textSize="17sp"
                tools:text="3" />

            <View
                android:id="@+id/reservation_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/reservation_number_of_people"
                android:layout_marginTop="7dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reservation_line"
                android:layout_marginTop="7dp"
                android:fontFamily="serif"
                android:text="@string/total_price"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/reservation_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/reservation_line"
                android:layout_marginTop="7dp"
                android:fontFamily="serif"
                android:textColor="@color/dark_light"
                android:textSize="17sp"
                tools:text="120" />

            <Button
                android:id="@+id/reservation_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reservation_total_price"
                android:layout_marginTop="17dp"
                android:background="@drawable/buttons_background"
                android:text="@string/up"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/reservation_down_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/reservation_total_price"
                android:layout_marginTop="17dp"
                android:background="@drawable/buttons_background"
                android:text="@string/down"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

        <TextView
            android:id="@+id/reservation_cinema_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="serif"
            android:padding="17dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/relative_lay_dow"
            tools:text="NO Kids" />

        <Button
            android:id="@+id/reservation_book_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/buttons_background"
            android:text="@string/book"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/reservation_cinema_policy" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>