<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/wid_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="serif"
        android:padding="7dp"
        android:text="@string/movie_name"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/widget_movie_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/wid_name_tv"
        android:fontFamily="serif"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:text="Name" />

    <TextView
        android:id="@+id/wid_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wid_name_tv"
        android:fontFamily="serif"
        android:padding="7dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/widget_movie_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wid_name_tv"
        android:layout_toEndOf="@+id/wid_date_tv"
        android:fontFamily="serif"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:text="15/03/2018" />

    <TextView
        android:id="@+id/wid_cinema_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wid_date_tv"
        android:fontFamily="serif"
        android:padding="7dp"
        android:text="@string/cinema_name"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/widget_cinema_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wid_date_tv"
        android:layout_toEndOf="@+id/wid_cinema_tv"
        android:fontFamily="serif"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:text="name" />

    <TextView
        android:id="@+id/wid_location_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wid_cinema_tv"
        android:fontFamily="serif"
        android:padding="7dp"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/widget_cinema_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wid_cinema_tv"
        android:layout_toEndOf="@+id/wid_location_tv"
        android:fontFamily="serif"
        android:padding="7dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:text="151616 street" />

</RelativeLayout>