<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_dark_black"
    android:padding="7dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/detailed_movie_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/rate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/detailed_movie_image" />

        <TextView
            android:id="@+id/detailed_movie_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_light"
            android:textSize="17sp"
            app:layout_constraintLeft_toRightOf="@+id/rate_tv"
            app:layout_constraintTop_toBottomOf="@+id/detailed_movie_image"
            tools:text="7.5/10" />


        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailed_movie_image" />

        <TextView
            android:id="@+id/detailed_movie_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_light"
            android:textSize="17sp"
            app:layout_constraintLeft_toRightOf="@+id/date_tv"
            app:layout_constraintTop_toBottomOf="@+id/detailed_movie_image"
            tools:text="05/04/2018" />

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailed_movie_rate" />

        <TextView
            android:id="@+id/detailed_movie_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif"
            android:textColor="@color/dark_light"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/description_tv"
            tools:text="this is the movie description" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>